<resources>
  <string name="app_name">DemoProject</string>

  <string name="hello_world">Home Activity</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_profile">ProfileActivity</string>

  <string name="name">Name</string>
  <string name="email">Email</string>
  <string name="number">Phone Number</string>
  <string name="gender">Gender</string>
  <string name="city">City</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="submit">Submit</string>
  <string name="title_activity_profile_detail">ProfileDetailActivity</string>
  <string name="title_activity_profile_custom">ProfileCustomActivity</string>
  <string name="title_activity_fragment">FragmentActivity</string>

<!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
