<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="demo.com.demoproject.ProfileActivity">

  <EditText
      android:id="@+id/etName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/name"/>

  <EditText
      android:id="@+id/etEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:layout_below="@+id/etName"/>

  <EditText
      android:id="@+id/etNumber"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/number"
      android:layout_below="@+id/etEmail"/>

  <TextView
      android:id="@+id/txtGender"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/gender"
      android:textSize="18sp"
      android:layout_below="@+id/etNumber"/>
  
  <RadioGroup
      android:id="@+id/rgGender"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txtGender">
    
    <RadioButton
        android:id="@+id/rdMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textSize="18sp"/>

    <RadioButton
        android:id="@+id/rdFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:textSize="18sp"/>
    
  </RadioGroup>

  <Spinner
      android:id="@+id/spCity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/rgGender"
      android:entries="@array/city_array"></Spinner>

  <Button
      android:id="@+id/btnSubmit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/submit"
      android:layout_below="@+id/spCity"
      android:layout_centerHorizontal="true"/>

</RelativeLayout>
